@@ -15,6 +15,8 @@
 
     Run irqbalance after /var is rw #85304 by Miroslaw Mieszczak.
 
+    Redo the addon code to prepare for profiling support #74425.
+
   12 May 2005; Mike Frysinger <vapier@gentoo.org>:
 
     Move pam files out of baselayout and into packages #92387.
